--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,24 @@
 body {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: auto;
 }
 
 .navbar {
-  background-color: rgb(5, 101, 126);
+  background-color: lightgrey;
+  display: flex;
   width: 100%;
 }
 
-.navbar a {
-  color: white;
+.spacer {
   display: inline-block;
-  font-size: 15px;
+  flex-grow: 1;
+}
+
+.navbar a {
+  color: black;
+  display: inline-block;
+  font-size: 20px;
+  text-transform: uppercase;
   padding: 10px;
   text-decoration: none;
 }
