--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ footer {
 }
 
 .navbar {
-  background-color: lightgrey;
+  background-color: #14213D;
   display: flex;
   width: 100%;
   position: fixed;
