--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,11 +3,30 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 footer {
   background-color: lightgrey;
   width: 100%;
+  height: 15vh;
+  margin: 0;
+  padding: 10px 0px 10px 0px;
+}
+
+button {
+  text-transform: uppercase;
+}
+
+form {
+  width: 25vw;
+  margin: 60px;
+}
+
+textarea:focus, input:focus {
+  border: none;
 }
 
 .flex {
@@ -39,9 +58,11 @@ footer {
 }
 
 .navbar {
-  background-color: #14213D;
+  /* background-color: #14213D; */
+  background-color: #000000;
   display: flex;
   width: 100%;
+  height: 5vh;
 }
 
 #nav {
@@ -77,6 +98,10 @@ footer {
   height: 100vh;
 }
 
+.center-text {
+  text-align: center;
+}
+
 #home {
   background-color: #14213D;
   color: #ffffff;
@@ -88,4 +113,46 @@ footer {
 
 #main-header {
   font-size: 1.5em;
+}
+
+#about {
+  padding-top: 75px;
+}
+
+#contact {
+  background-color: #000000;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 80vh;
+}
+
+#contact h1 {
+  text-transform: uppercase;
+}
+
+#contact input, textarea {
+  width: 100%;
+  margin-bottom: 2px;
+  background-color: lightgrey;
+  border: none;
+  padding: 10px;
+}
+
+#contact input {
+  height: 2em;
+}
+
+#contact textarea {
+  height: 10vh;
+}
+
+#contact button {
+  float: right;
+  background-color: #000000;
+  color: #ffffff;
+  border: 2px solid white;
+  padding: 5px;
+  margin: 0;
 }
