--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,113 +2,29 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-footer {
-  background-color: lightgrey;
-  width: 100%;
-  height: 15vh;
-  margin: 0;
-  padding: 10px 0px 10px 0px;
 }
 
 button {
   text-transform: uppercase;
 }
 
-form {
-  width: 25vw;
-  margin: 60px;
-}
-
-textarea:focus, input:focus {
-  border: none;
-}
-
-.flex {
-  display: flex;
-}
-
-.row {
-  flex-direction: row;
-}
-
-.icon-wrap {
-  justify-content: center;
-}
-
-.center-items {
-  justify-content: center;
-  align-items: center;
-}
-
-.icon {
-  font-size: 36px;
-  color: black;
-  margin: 0.4em;
-  padding: 0.2em;
-}
-
-.icon:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.navbar {
-  /* background-color: #14213D; */
-  background-color: #000000;
-  display: flex;
-  width: 100%;
-  height: 5vh;
-}
-
 #nav {
-  width: 100%;
   position: fixed;
   top: 0px;
   display: none;
 }
 
-.spacer {
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.navbar a {
-  color: #ffffff;
-  display: inline-block;
-  font-size: 20px;
-  text-transform: uppercase;
+#nav a {
+  color: white;
   padding: 10px;
   text-decoration: none;
 }
 
 .navbar a:hover {
   color: #ffffff;
-}
-
-.footnote {
-  text-align: center;
-}
-
-.full-height {
-  height: 100vh;
-}
-
-.center-text {
-  text-align: center;
-}
-
-#home {
-  background-color: #14213D;
-  color: #ffffff;
-}
-
-#name {
-  color: #FF8811;
 }
 
 #main-header {
@@ -123,19 +39,6 @@ textarea:focus, input:focus {
   padding-top: 5vh
 }
 
-#contact {
-  background-color: #000000;
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 80vh;
-}
-
-#contact h1 {
-  text-transform: uppercase;
-}
-
 #contact input, textarea {
   width: 100%;
   margin-bottom: 2px;
@@ -144,13 +47,9 @@ textarea:focus, input:focus {
   padding: 10px;
 }
 
-#contact input {
-  height: 2em;
-}
-
 #contact textarea {
   height: 10vh;
-}
+} */
 
 #contact button {
   float: right;
