--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,66 +21,66 @@ body {
 }
 
 .sliding-vertical span {
-  animation: topToBottom 12s linear infinite 0s;
-  -ms-animation: topToBottom 12s linear infinite 0s;
-  -webkit-animation: topToBottom 12s linear infinite 0s;
+  animation: topToBottom 16s linear infinite 0s;
+  -ms-animation: topToBottom 16s linear infinite 0s;
+  -webkit-animation: topToBottom 16s linear infinite 0s;
   opacity: 0;
   overflow: hidden;
   position: absolute;
 }
 
 .sliding-vertical span:nth-child(2) {
-  animation-delay: 3s;
-  -ms-animation-delay: 3s;
-  -webkit-animation-delay: 3s;
+  animation-delay: 4s;
+  -ms-animation-delay: 4s;
+  -webkit-animation-delay: 4s;
 }
 
 .sliding-vertical span:nth-child(3) {
-  animation-delay: 6s;
-  -ms-animation-delay: 6s;
-  -webkit-animation-delay: 6s;
+  animation-delay: 8s;
+  -ms-animation-delay: 8s;
+  -webkit-animation-delay: 8s;
 }
 
 .sliding-vertical span:nth-child(4) {
-  animation-delay: 9s;
-  -ms-animation-delay: 9s;
-  -webkit-animation-delay: 9s;
+  animation-delay: 12s;
+  -ms-animation-delay: 12s;
+  -webkit-animation-delay: 12s;
 }
 
 /* topToBottom aniation */
 @-moz-keyframes topToBottom{
 	0% { opacity: 0; }
-	5% { opacity: 0; -moz-transform: translateY(-50px); }
+	5% { opacity: 0; -moz-transform: translateY(-20px); }
 	10% { opacity: 1; -moz-transform: translateY(0px); }
 	25% { opacity: 1; -moz-transform: translateY(0px); }
-	30% { opacity: 0; -moz-transform: translateY(50px); }
+	30% { opacity: 0; -moz-transform: translateY(20px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @-webkit-keyframes topToBottom{
 	0% { opacity: 0; }
-	5% { opacity: 0; -webkit-transform: translateY(-50px); }
+	5% { opacity: 0; -webkit-transform: translateY(-20px); }
 	10% { opacity: 1; -webkit-transform: translateY(0px); }
 	25% { opacity: 1; -webkit-transform: translateY(0px); }
-	30% { opacity: 0; -webkit-transform: translateY(50px); }
+	30% { opacity: 0; -webkit-transform: translateY(20px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @-ms-keyframes topToBottom{
 	0% { opacity: 0; }
-	5% { opacity: 0; -ms-transform: translateY(-50px); }
+	5% { opacity: 0; -ms-transform: translateY(-20px); }
 	10% { opacity: 1; -ms-transform: translateY(0px); }
 	25% { opacity: 1; -ms-transform: translateY(0px); }
-	30% { opacity: 0; -ms-transform: translateY(50px); }
+	30% { opacity: 0; -ms-transform: translateY(20px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
 @keyframes topToBottom{
 	0% { opacity: 0; }
-	5% { opacity: 0; -ms-transform: translateY(-50px); }
-	10% { opacity: 1; -ms-transform: translateY(0px); }
-	25% { opacity: 1; -ms-transform: translateY(0px); }
-	30% { opacity: 0; -ms-transform: translateY(50px); }
+	5% { opacity: 0; transform: translateY(-20px); }
+	10% { opacity: 1; transform: translateY(0px); }
+	25% { opacity: 1; transform: translateY(0px); }
+	30% { opacity: 0; transform: translateY(20px); }
 	80% { opacity: 0; }
 	100% { opacity: 0; }
 }
