--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,12 @@ body {
   box-sizing: border-box;
 }
 
+.bar {
+  background: grey;
+  width: 100%;
+  padding: 2px;
+}
+
 #nav {
   position: fixed;
   top: 0px;
